Fixed issue where bg-yellow gradient is only visible if you visit home page first

--- a/app/HomePage.css
+++ b/app/HomePage.css
@@ -1,10 +1,4 @@
 /* || General styles */
-
-.bg-yellow {
-  background: #ffd700;
-  background: radial-gradient(circle, #ffd700 80%, #000 100%);
-}
-
 .sections-container {
   padding-top: 108px;
   padding-bottom: 108px;
@@ -229,10 +223,5 @@
 
   .carousel-caption {
     bottom: 30px;
-  }
-
-  .bg-yellow {
-    background: #ffd700;
-    background: radial-gradient(circle, #ffd700 92%, #000 100%);
   }
 }
